--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--slider-->
     <div class="slider">
         <div class="slides">
-            <img class="slide" src="./picture/6.png" alt="Image #1">
+            <img class="slide" src="./6.png" alt="Image #1">
             <img class="slide" src="./picture/1.png" alt="Image #2">
             <img class="slide" src="./picture/5.png" alt="Image #3">
             <img class="slide" src="./picture/4.png" alt="Image #4">
@@ -45,11 +45,11 @@
             </div>
         </div>
         <div class="card">
-            <img src="./picture/1.png" alt="">
+            <img src="./1.png" alt="">
             <div class="card-content">
                 <h3>CD 70 Dream</h3>
                 <p>Comfort , Style and Efficiency Togeather.</p>
-                <a href="./cddream.html" class="btn">Book now</a>
+                <a href="cddream.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
