--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!--slider-->
     <div class="slider">
         <div class="slides">
-            <img class="slide" src="./6.png" alt="Image #1">
-            <img class="slide" src="./picture/1.png" alt="Image #2">
-            <img class="slide" src="./picture/5.png" alt="Image #3">
-            <img class="slide" src="./picture/4.png" alt="Image #4">
-            <img class="slide" src="./picture/3.png" alt="Image #5">
-            <img class="slide" src="./picture/2.png" alt="Image #6">
-            <img class="slide" src="./picture/8.png" alt="Image #7">
-            <img class="slide" src="./picture/7.png" alt="Image #8">
+            <img class="slide" src="6.png" alt="Image #1">
+            <img class="slide" src="1.png" alt="Image #2">
+            <img class="slide" src="5.png" alt="Image #3">
+            <img class="slide" src="4.png" alt="Image #4">
+            <img class="slide" src="3.png" alt="Image #5">
+            <img class="slide" src="./2.png" alt="Image #6">
+            <img class="slide" src="8.png" alt="Image #7">
+            <img class="slide" src="7.png" alt="Image #8">
         </div>
         <button class="prev" onclick="prevSlide()">&#10094</button>
         <button class="next" onclick="nextSlide()">&#10095</button>
@@ -37,11 +37,11 @@
     <!--products-->
     <div id="PRODUCTS" class="card-container">
         <div class="card">
-            <img src="./picture/6.png" alt="">
+            <img src="6.png" alt="">
             <div class="card-content">
                 <h3>CD 70</h3>
                 <p>Atlas Honda CD70 Generation to Generation</p>
-                <a href="./70.html" class="btn">Book now</a>
+                <a href="70.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
