--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="./1.png" alt="">
+            <img src="1.png" alt="">
             <div class="card-content">
                 <h3>CD 70 Dream</h3>
                 <p>Comfort , Style and Efficiency Togeather.</p>
@@ -53,57 +53,57 @@
             </div>
         </div>
         <div class="card">
-            <img src="./picture/5.png" alt="">
+            <img src="5.png" alt="">
             <div class="card-content">
                 <h3>Pridor</h3>
                 <p> A quality ride with comfort and style</p>
-                <a href="./pridor.html" class="btn">Book now</a>
+                <a href="pridor.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
-            <img src="./picture/4.png" alt="">
+            <img src="4.png" alt="">
             <div class="card-content">
                 <h3>CG 125</h3>
                 <p>125 The soul of a real Men.</p>
-                <a href="./125.html" class="btn">Book now</a>
+                <a href="125.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
-            <img src="./picture/3.png" alt="">
+            <img src="3.png" alt="">
             <div class="card-content">
                 <h3>CG 125s</h3>
                 <p>A Powerful Ride with comfort.</p>
-                <a href="./125silver.html" class="btn">Book now</a>
+                <a href="125silver.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
-            <img src="./picture/2.png" alt="">
+            <img src="2.png" alt="">
             <div class="card-content">
                 <h3>CG 125 Gold</h3>
                 <p>If you love Gold don't think just buy it.</p>
-                <a href="./125gold.html" class="btn">Book now</a>
+                <a href="125gold.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
-            <img src="./picture/8.png" alt="">
+            <img src="8.png" alt="">
             <div class="card-content">
                 <h3>CB 125F</h3>
                 <p>power kay Tashan with comfort.</p>
-                <a href="./125dream.html" class="btn">Book now</a>
+                <a href="125dream.html" class="btn">Book now</a>
             </div>
         </div>
         <div class="card">
-            <img src="./picture/7.png" alt="">
+            <img src="7.png" alt="">
             <div class="card-content">
                 <h3>CB 150F</h3>
                 <p>Level UP your adventure.</p>
-                <a href="./cb150.html" class="btn">Book now</a>
+                <a href="cb150.html" class="btn">Book now</a>
             </div>
         </div>
     </div>
     <!--safety image-->
     <div class="safe">
-        <img src="./picture/safety.png" alt="">
+        <img src="safety.png" alt="">
     </div>
     <!--Footer-->
     <footer class="footer">
@@ -114,7 +114,7 @@
                     <ul>
                         <li><a href="about.html">About us </a></li>
                         <li><a href="https://maps.app.goo.gl/ZLptE8xtke7umGXj6">Dealer ship </a></li>
-                        <li><a href="#">Service </a></li>
+                        <li><a href="service.html">Service </a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
