--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img class="slide" src="5.png" alt="Image #3">
             <img class="slide" src="4.png" alt="Image #4">
             <img class="slide" src="3.png" alt="Image #5">
-            <img class="slide" src="./2.png" alt="Image #6">
+            <img class="slide" src="2.png" alt="Image #6">
             <img class="slide" src="8.png" alt="Image #7">
             <img class="slide" src="7.png" alt="Image #8">
         </div>
