--- a/125.html
+++ b/125.html
@@ -13,25 +13,25 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/4.png" alt = "shoe image">
-              <img src = "./picture/BIKI/red125.png" alt = "shoe image">
-              <img src = "./picture/BIKI/black125.png" alt = "shoe image">
+              <img src = "4.png" alt = "bike image">
+              <img src = "red125.png" alt = "bike image">
+              <img src = "black125.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/4.png" alt = "shoe image">
+                <img src = "4.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/red125.png" alt = "shoe image">
+                <img src = "red125.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/black125.png" alt = "shoe image">
+                <img src = "black125.png" alt = "bike image">
               </a>
             </div>
           </div>
