--- a/125dream.html
+++ b/125dream.html
@@ -14,32 +14,32 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/8.png" alt = "shoe image">
-              <img src = "./picture/BIKI/red125dr.png" alt = "shoe image">
-              <img src = "./picture/BIKI/black125dr.png" alt = "shoe image">
-              <img src = "./picture/BIKI/blue125dr.png" alt = "shoe image">
-              <img src = "./picture/BIKI/white125dr.png" alt = "shoe image">
+              <img src = "8.png" alt = "bike image">
+              <img src = "red125dr.png" alt = "bike image">
+              <img src = "black125dr.png" alt = "bike image">
+              <img src = "blue125dr.png" alt = "bike image">
+              <img src = "white125dr.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/8.png" alt = "shoe image">
+                <img src = "8.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/red125dr.png" alt = "shoe image">
+                <img src = "red125dr.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/black125dr.png" alt = "shoe image">
+                <img src = "black125dr.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
                 <a href = "#" data-id = "3">
-                  <img src = "./picture/BIKI/blue125dr.png" alt = "shoe image">
+                  <img src = "blue125dr.png" alt = "bike image">
                 </a>
               </div>
           </div>
