--- a/125silver.html
+++ b/125silver.html
@@ -14,25 +14,25 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/3.png" alt = "shoe image">
-              <img src = "./picture/BIKI/redsilver.png" alt = "shoe image">
-              <img src = "./picture/BIKI/blacksilver.png" alt = "shoe image">
+              <img src = "3.png" alt = "bike image">
+              <img src = "redsilver.png" alt = "bike image">
+              <img src = "blacksilver.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/3.png" alt = "shoe image">
+                <img src = "3.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/redsilver.png" alt = "shoe image">
+                <img src = "redsilver.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/blacksilver.png" alt = "shoe image">
+                <img src = "blacksilver.png" alt = "bike image">
               </a>
             </div>
           </div>
