--- a/70.html
+++ b/70.html
@@ -14,31 +14,31 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/6.png" alt = "shoe image">
-              <img src = "./picture/BIKI/red70.png" alt = "shoe image">
-              <img src = "./picture/BIKI/black70.png" alt = "shoe image">
-              <img src = "./picture/BIKI/blue70.png" alt = "shoe image">
+              <img src = "6.png" alt = "bike image">
+              <img src = "red70.png" alt = "bike image">
+              <img src = "black70.png" alt = "bike image">
+              <img src = "blue70.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/6.png" alt = "shoe image">
+                <img src = "6.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/red70.png" alt = "shoe image">
+                <img src = "red70.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/black70.png" alt = "shoe image">
+                <img src = "black70.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "./picture/BIKI/black70.png" alt = "shoe image">
+                <img src = "black70.png" alt = "bike image">
               </a>
             </div>
           </div>
