--- a/cb150.html
+++ b/cb150.html
@@ -14,32 +14,32 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/7.png" alt = "shoe image">
-              <img src = "./picture/BIKI/red150.png" alt = "shoe image">
-              <img src = "./picture/BIKI/black150.png" alt = "shoe image">
-              <img src = "./picture/BIKI/blue150.png" alt = "shoe image">
-              <img src = "./picture/BIKI/gray150.png" alt = "shoe image">
+              <img src = "7.png" alt = "bike image">
+              <img src = "red150.png" alt = "bike image">
+              <img src = "black150.png" alt = "bike image">
+              <img src = "blue150.png" alt = "bike image">
+              <img src = "gray150.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/7.png" alt = "shoe image">
+                <img src = "7.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/red150.png" alt = "shoe image">
+                <img src = "red150.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/black150.png" alt = "shoe image">
+                <img src = "black150.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
                 <a href = "#" data-id = "3">
-                  <img src = "./picture/BIKI/blue150.png" alt = "shoe image">
+                  <img src = "blue150.png" alt = "bike image">
                 </a>
               </div>
           </div>
