--- a/pridor.html
+++ b/pridor.html
@@ -14,31 +14,31 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/5.png" alt = "shoe image">
-              <img src = "./picture/BIKI/redpridor.png" alt = "shoe image">
-              <img src = "./picture/BIKI/blackpridor.png" alt = "shoe image">
-              <img src = "./picture/BIKI/bluepridor.png" alt = "shoe image">
+              <img src = "5.png" alt = "bike image">
+              <img src = "redpridor.png" alt = "bike image">
+              <img src = "blackpridor.png" alt = "bike image">
+              <img src = "bluepridor.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/5.png" alt = "shoe image">
+                <img src = "5.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/redpridor.png" alt = "shoe image">
+                <img src = "redpridor.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/blackpridor.png" alt = "shoe image">
+                <img src = "blackpridor.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "./picture/BIKI/bluepridor.png" alt = "shoe image">
+                <img src = "bluepridor.png" alt = "bike image">
               </a>
             </div>
           </div>
