--- a/cddream.html
+++ b/cddream.html
@@ -13,31 +13,31 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "./picture/1.png" alt = "shoe image">
-              <img src = "./picture/BIKI/reddream.png" alt = "shoe image">
-              <img src = "./picture/BIKI/blackdream.png" alt = "shoe image">
-              <img src = "./picture/BIKI/draydream.png" alt = "shoe image">
+              <img src = "1.png" alt = "bike image">
+              <img src = "reddream.png" alt = "bike image">
+              <img src = "blackdream.png" alt = "bike image">
+              <img src = "draydream.png" alt = "bike image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "./picture/1.png" alt = "shoe image">
+                <img src = "1.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "./picture/BIKI/reddream.png" alt = "shoe image">
+                <img src = "reddream.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "./picture/BIKI/blackdream.png" alt = "shoe image">
+                <img src = "blackdream.png" alt = "bike image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "./picture/BIKI/draydream.png" alt = "shoe image">
+                <img src = "draydream.png" alt = "bike image">
               </a>
             </div>
           </div>
