--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 <div class="footer-col">
                     <h4>follow us</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/Aliyan Aliyan/"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/al.iyan597/""><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>  
             </div>
