--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="social-links">
                         <a href="https://www.facebook.com/Aliyan Aliyan/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/al.iyan597/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/al.iyan597/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>  
             </div>
